# openTAMP-legacy

./: .gitignore  LICENSE  README.md  pyproject.toml  test_training.sh
opentamp/envs/: __init__.py  baxter_block_stack_env.py  baxter_cloth_env.py  baxter_mjc_env.py  baxter_rope_env.py  hsr_mjc_env.py  hsr_ros_env.py  mjc_env.py  old_hsr_mjc_env.py
opentamp/robot_info/: back.xml  bak_baxter_model.xml  bak_lidar_arm.xml  bak_lidar_namo.xml  baxter_model.xml  current_baxter_env.xml  current_hsr_env.xml  current_hsr_rot_env.xml  empty.xml  hsr_model.xml  hsr_rot_model.xml  lidar_arm.xml  lidar_arm_simple.xml  lidar_namo.xml  namo.xml  newtheta.xml  robots.py  theta_namo.xml
opentamp/robot_info/hsr/: simple_hsrb4s.urdf
opentamp/robot_info/robodesk/: desk.xml  desk_drawer.xml  desk_shelf.xml  franka_panda.xml  panda.xml
opentamp/robot_info/sawyer/: bak_robot.xml  robot.xml
opentamp/src/: gen_hsr_ros.py  gen_labels.sh  load_env.py  run_grip_image.sh  tampy_main.py  temp.py  temp_baxter.py  temp_desk.py  temp_grip.py  temp_namo.py  temp_old_namo.py  temp_prob.pddl  temp_robo.py  test_baxter_env.py  test_grip.py  test_grip_det.py  test_grip_gurobi.py  test_grip_osqp.py  test_grip_randomized.py  test_stack.py
opentamp/src/pma/: backtrack_ll_solver_OSQP.py  backtrack_ll_solver_gurobi.py  can_solver.py  driving_solver.py  hl_solver.py  hsr_solver.py  ll_solver_OSQP.py  ll_solver_gurobi.py  (+9 more)
opentamp/util_classes/: hsr_ik_controller.py  ik_controller.py  mjc_xml_utils.py  openrave_body.py
src/: errors_exceptions.py  main.py
temp/: _temp_prob.output  _temp_prob.pddl
(+200 files in other folders)
