[tool.poetry]
name = "opentamp"
version = "0.1.0"
description = "Open-Source Robot Task and Motion Planning with Python!"
authors = ["Nishanth Kumar <njk@csail.mit.edu>, Dylan Hadfield-Menell <dhm@csail.mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.13.3,<=1.14.5"
pybullet = "3.1.6"
ipdb = "^0.13.9"
numdifftools = "^0.9.40"
seaborn = "0.9.0"
psutil = "^5.8.0"
mpi4py = "^3.1.2"
imageio = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
