[tool.poetry]
name = "opentamp"
version = "0.1.0"
description = "Open-Source Robot Task and Motion Planning with Python!"
authors = ["Nishanth Kumar <njk@csail.mit.edu>, Dylan Hadfield-Menell <dhm@csail.mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
numpy = ">=1.13.3"
pybullet = "3.1.6"
ipdb = "^0.13.9"
numdifftools = "^0.9.40"
psutil = "^5.8.0"
mpi4py = "^3.1.2"
imageio = "^2.12.0"
robosuite = "^1.3.1"
numba = ">=0.52.0,<=0.53.1"
dm-control = "^0.0.403778684"
h5py = "^3.6.0"
tensorflow = "<1.15"
matplotlib = "^3.5.0"
gym = "^0.21.0"
sco-py = { git = "https://github.com/Algorithmic-Alignment-Lab/sco.git", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
